--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Products/Delete.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Products/Delete.cshtml
@@ -7,51 +7,63 @@
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
-<div>
+<div class="card-container">
     <h4>Product</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.NameProduct)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.NameProduct)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.Image)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image)
+        <dd class="col-sm-8">
+            @if (!string.IsNullOrEmpty(Model.Image))
+            {
+                <img src="~/@Model.Image" alt="Imagen del producto" class="product-image" />
+            }
+            else
+            {
+                <span>No image</span>
+            }
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.Stock)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.Stock)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.Price)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.Price)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.ExpirationDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.ExpirationDate)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.Category)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.Category.NameCategory)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdProduct" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
     </form>
 </div>
