--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Products/Delete.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Products/Delete.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>Delete</h1>
-
+<link rel="stylesheet" href="~/css/Producto.css" />
 <h3>Are you sure you want to delete this?</h3>
 <div class="card-container">
     <h4>Product</h4>
