--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Products/Details.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Products/Details.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h1>Detalles del Producto</h1>
+<link rel="stylesheet" href="~/css/Producto.css" />
 
 <div class="card-container">
     <h4>Producto</h4>
