--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Users/Create.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Users/Create.cshtml
@@ -2,10 +2,10 @@
 @{
     ViewData["Title"] = "Create";
 }
-<h1>Create</h1>
-<h4>User</h4>
+<h1>Create User</h1>
+<h4>User Information</h4>
 <hr />
-
+<link rel="stylesheet" href="~/css/Users.css" />
 @if (ViewBag.Error != null)
 {
     <div class="alert alert-danger">
@@ -14,30 +14,34 @@
 }
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8">
         <form asp-action="Create" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-            <div class="form-group">
-                <label for="Email" class="control-label">Email Address</label>
-                <input name="Email" id="Email" class="form-control" type="email" required />
+            <h4>User Account</h4>
+            <hr />
+
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="Email" class="control-label">Email Address</label>
+                    <input name="Email" id="Email" class="form-control" type="email" required />
+                </div>
+                <div class="form-group">
+                    <label for="Password" class="control-label">Password</label>
+                    <input name="Password" id="Password" class="form-control" type="password" required />
+                </div>
             </div>
-            <div class="form-group">
-                <label for="Password" class="control-label">Password</label>
-                <input name="Password" id="Password" class="form-control" type="password" required />
-            </div>
+
             <div class="form-group">
                 <label for="Rol" class="control-label">Role</label>
                 @if (ViewBag.IsEmployee == true)
                 {
-                   
                     <select name="Rol" id="Rol" class="form-control" required>
                         <option value="Customer">Customer</option>
                     </select>
                 }
                 else
                 {
-                   
                     <select name="Rol" id="Rol" class="form-control" required>
                         <option value="">-- Select Role --</option>
                         <option value="Admin">Admin</option>
@@ -47,36 +51,44 @@
                 }
             </div>
 
-            <h4>Person</h4>
+            <h4>Person Information</h4>
             <hr />
 
-            <div class="form-group">
-                <label for="Name" class="control-label">NAME</label>
-                <input name="Name" id="Name" class="form-control" required />
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="Name" class="control-label">NAME</label>
+                    <input name="Name" id="Name" class="form-control" required />
+                </div>
+                <div class="form-group">
+                    <label for="LasName" class="control-label">LAST NAME</label>
+                    <input name="LasName" id="LasName" class="form-control" required />
+                </div>
             </div>
-            <div class="form-group">
-                <label for="LasName" class="control-label">LAST NAME</label>
-                <input name="LasName" id="LasName" class="form-control" required />
+
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="SecondLastName" class="control-label">SECOND LAST NAME</label>
+                    <input name="SecondLastName" id="SecondLastName" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label for="Cnit" class="control-label">CNIT</label>
+                    <input name="Cnit" id="Cnit" type="number" class="form-control" required />
+                </div>
             </div>
-            <div class="form-group">
-                <label for="SecondLastName" class="control-label">SECOND LAST NAME</label>
-                <input name="SecondLastName" id="SecondLastName" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label for="DateBirthay" class="control-label">Date of Birth</label>
-                <input name="DateBirthay" id="DateBirthay" type="date" class="form-control" required />
-            </div>
-            <div class="form-group">
-                <label for="Cnit" class="control-label">CNIT</label>
-                <input name="Cnit" id="Cnit" type="number" class="form-control" required />
-            </div>
-            <div class="form-group">
-                <label for="Gender" class="control-label">Gender</label>
-                <select name="Gender" id="Gender" class="form-control" required>
-                    <option value="">-- Select Gender --</option>
-                    <option value="M">M</option>
-                    <option value="F">F</option>
-                </select>
+
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="DateBirthay" class="control-label">Date of Birth</label>
+                    <input name="DateBirthay" id="DateBirthay" type="date" class="form-control" required />
+                </div>
+                <div class="form-group">
+                    <label for="Gender" class="control-label">Gender</label>
+                    <select name="Gender" id="Gender" class="form-control" required>
+                        <option value="">-- Select Gender --</option>
+                        <option value="M">M</option>
+                        <option value="F">F</option>
+                    </select>
+                </div>
             </div>
 
             <div class="form-group">
