--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Users/Index.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Users/Index.cshtml
@@ -2,21 +2,17 @@
 @{
     ViewData["Title"] = "Index";
 }
-<h1>Index</h1>
+<h1>Users</h1>
+<link rel="stylesheet" href="~/css/Users.css" />
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
-<table class="table">
+
+<table class="table table-striped">
     <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Password)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.primarySession)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Rol)
@@ -28,9 +24,12 @@
                 Last Name
             </th>
             <th>
+                CNIT
+            </th>
+            <th>
                 Gender
             </th>
-            <th></th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -39,12 +38,6 @@
             <tr>
                 <td>
                     @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Password)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.primarySession)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Rol)
@@ -56,12 +49,18 @@
                     @item.Person?.LasName
                 </td>
                 <td>
+                    @item.Person?.Cnit
+                </td>
+                <td>
                     @item.Person?.Gender
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning btn-sm">Edit</a>
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info btn-sm">Details</a>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Delete</a>
+                    }
                 </td>
             </tr>
         }
