--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/SalePlan/Index.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/SalePlan/Index.cshtml
@@ -75,7 +75,7 @@ else
 {
     <div class="alert alert-warning">No se encontraron personas.</div>
 }
-
+<link rel="stylesheet" href="~/css/SaleProduct.css" />
 <hr />
 
 <h3>Planes disponibles</h3>
