--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/SalePlan/PersonsIndex.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/SalePlan/PersonsIndex.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Personas y sus planes";
 }
-
+<link rel="stylesheet" href="~/css/SaleProduct.css" />
 <h2>Personas y sus planes</h2>
 
 <table class="table table-bordered">
