--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/SaleProduct/Checkout.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/SaleProduct/Checkout.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Confirmar compra";
     var person = ViewBag.Person as Proyecto_Gimnasio.Models.Person;
 }
-
+<link rel="stylesheet" href="~/css/SaleProduct.css" />
 <h2>Confirmación de Compra</h2>
 
 <p>Compra para: <strong>@person?.Name @person?.LasName</strong></p>
