--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/SaleProduct/Index.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/SaleProduct/Index.cshtml
@@ -6,7 +6,7 @@
     var selectedPersonId = (int)ViewBag.SelectedPersonId;
     var searchName = ViewBag.SearchName as string ?? "";
 }
-
+<link rel="stylesheet" href="~/css/SaleProduct.css" />
 <h2>Productos y Personas</h2>
 
 @if (TempData["ok"] != null)
