--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/SaleProduct/PersonsIndex.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/SaleProduct/PersonsIndex.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Personas y sus productos comprados";
 }
-
+<link rel="stylesheet" href="~/css/SaleProduct.css" />
 <h2>Personas y sus productos</h2>
 
 <table class="table table-bordered">
