--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Categories/Create.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Categories/Create.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Create";
 }
-
+<link rel="stylesheet" href="~/css/category.css" />
 <h1>Create</h1>
 
 <h4>Category</h4>
