--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/SaleProduct/Cart.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/SaleProduct/Cart.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Carrito de Productos";
     var personId = (int)ViewBag.SelectedPersonId;
 }
-
+<link rel="stylesheet" href="~/css/SaleProduct.css" />
 <h2>Carrito</h2>
 
 @if (!Model.Any())
