--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Home/User.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Home/User.cshtml
@@ -39,14 +39,14 @@
                 <span style="font-size: 3rem;">📋</span>
                 <h3>Ver Planes</h3>
                 <p>Gestiona tu suscripción actual.</p>
-                <a asp-controller="Plans" asp-action="Index" class="btn-cta">Ir a Planes</a>
+                <a asp-controller="SalePlan" asp-action="Index" class="btn-cta">Ir a Planes</a>
             </div>
 
             <div class="card">
                 <span style="font-size: 3rem;">🥤</span>
                 <h3>Tienda</h3>
                 <p>Suplementos y equipamiento.</p>
-                <a asp-controller="Products" asp-action="Index" class="btn-cta">Ir a Productos</a>
+                <a asp-controller="SaleProductUser" asp-action="Index" class="btn-cta">Ir a Productos</a>
             </div>
 
         </div>
