--- a/Proyecto Gimnasio/Proyecto Gimnasio/Views/Home/User.cshtml
+++ b/Proyecto Gimnasio/Proyecto Gimnasio/Views/Home/User.cshtml
@@ -39,7 +39,7 @@
                 <span style="font-size: 3rem;">📋</span>
                 <h3>Ver Planes</h3>
                 <p>Gestiona tu suscripción actual.</p>
-                <a asp-controller="SalePlan" asp-action="Index" class="btn-cta">Ir a Planes</a>
+                <a asp-controller="SalePlanUser" asp-action="Index" class="btn-cta">Ir a Planes</a>
             </div>
 
             <div class="card">
@@ -48,7 +48,7 @@
                 <p>Suplementos y equipamiento.</p>
                 <a asp-controller="SaleProductUser" asp-action="Index" class="btn-cta">Ir a Productos</a>
             </div>
-
+    
         </div>
     </section>
 
